force-app/main/default/objects/Leave_Request__c/fields/Duration_Category__c.field-meta.xml
<CustomField>
    <fullName>Duration_Category__c</fullName>
    <label>Duration Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>