force-app/main/default/objects/Leave_Request__c/validationRules/Prevent_Approval_Over_5_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Approval_Over_5_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Number_of_Days__c &gt; 5,
     ISPICKVAL( Status__c , &quot;Approved&quot;) 
)</errorConditionFormula>
    <errorMessage>Leave requests exceeding 5 days cannot be approved.</errorMessage>
</ValidationRule>