force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Applicant_Name__c</columns>
    <columns>NAME</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>